force-app/main/default/objects/Talent_Pool_Metric__c/Talent_Pool_Metric__c.object-meta.xml
<CustomObject>
    <description>Store daily snapshots of talent pool metrics for reporting.</description>
    <label>Talent Pool Metric</label>
    <nameField>
        <displayFormat>TPM-{00000}</displayFormat>
        <label>Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talent Pool Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>