force-app/main/default/objects/Talent_Pool_Metric__c/fields/Avg_Experience__c.field-meta.xml
<CustomField>
    <fullName>Avg_Experience__c</fullName>
    <description>Average years experience</description>
    <label>Avg Experience</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>