force-app/main/default/objects/Talent_Pool_Metric__c/fields/Avg_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Avg_Match_Score__c</fullName>
    <description>Average AI match score</description>
    <label>Avg Match Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>