force-app/main/default/objects/Talent_Pool_Metric__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Talent Pool Metrics</relationshipLabel>
    <relationshipName>Talent_Pool_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>