force-app/main/default/objects/Talent_Pool_Metric__c/fields/Engagement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Rate__c</fullName>
    <description>% of pool contacted</description>
    <label>Engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>