force-app/main/default/objects/Talent_Pool_Metric__c/fields/New_This_Week__c.field-meta.xml
<CustomField>
    <fullName>New_This_Week__c</fullName>
    <description>Added in last 7 days</description>
    <label>New This Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>