force-app/main/default/objects/Talent_Pool_Metric__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>Metric date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>