force-app/main/default/objects/Talent_Pool_Metric__c/fields/Talent_Pool__c.field-meta.xml
<CustomField>
    <fullName>Talent_Pool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent Pool</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Talent Pool Metrics</relationshipLabel>
    <relationshipName>Talent_Pool_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>