force-app/main/default/objects/Talent_Pool_Metric__c/fields/Top_Skills__c.field-meta.xml
<CustomField>
    <fullName>Top_Skills__c</fullName>
    <description>JSON of skill distribution</description>
    <label>Top Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>