force-app/main/default/objects/Talent_Pool_Metric__c/fields/Total_Pool_Size__c.field-meta.xml
<CustomField>
    <fullName>Total_Pool_Size__c</fullName>
    <description>Total candidates</description>
    <label>Pool Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>